[package]
name = "pep440-parser"
version = "0.1.0"
authors = ["Caleb Zulawski <caleb.zulawski@gmail.com>"]
edition = "2018"

[features]
default = []
serde = ["serde-dep"]

[dependencies]
nom = "6"
serde-dep = { package = "serde", version = "1", optional = true }

[package.metadata.docs.rs]
all-features = true
